<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/item_Home"
            android:checked="true"
            android:title="@string/page_Main"
            android:icon="@drawable/ic_home24"/>

        <item
            android:id="@+id/item_Account"
            android:title="@string/page_Account"
            android:icon="@drawable/ic_account24"/>

        <item
            android:id="@+id/item_Record"
            android:title="@string/page_Record"
            android:icon="@drawable/ic_record24"/>

        <item
            android:id="@+id/item_Deposit"
            android:title="@string/page_Deposit"
            android:icon="@drawable/ic_deposit24"/>

        <item
            android:id="@+id/item_Booking"
            android:title="@string/page_Booking"
            android:icon="@drawable/ic_booking24"/>

        <item
        android:id="@+id/item_Favoriate"
        android:title="@string/page_Favorite"
            android:icon="@drawable/ic_favorite24"/>

        <item
            android:id="@+id/item_Logout"
            android:title="@string/page_Logout"
            android:icon="@drawable/ic_logout24"/>

    </group>


</menu>