<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <!--<item-->
        <!--android:id="@+id/action_loopback"-->
        <!--android:icon="@drawable/ic_loopback_call"-->
        <!--android:showAsAction="always"-->
        <!--android:title="@string/action_loopback"/>-->
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/action_settings"
        app:showAsAction="always" />

    <item
        android:id="@+id/lang_english"
        android:title="@string/language_english" />


    <item
        android:id="@+id/lang_indonesia"
        android:title="@string/language_indonesia" />


</menu>
