<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:text="@string/change_password"
        android:onClick="onLogoutClick"
        android:textSize="16dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#777777" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:text="@string/change_profile"
        android:textSize="16dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#777777" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:text="@string/page_Logout"
        android:textSize="16dp"
        android:onClick="onLogoutClick"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#777777" />

</LinearLayout>