<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:background="@color/colorPrimary"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/chopreter_calling"
            android:layout_marginTop="30dp" />

    </RelativeLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ivCallingImage"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="-40dp"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:civ_border_color="@color/white"
        app:civ_border_width="1dp"
        android:src="@drawable/p04"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/tvCallingName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:text="Name"
        android:layout_below="@+id/ivCallingImage"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center">

    <ImageButton
        android:id="@+id/btnPickup"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/connect"
        android:contentDescription="@string/connect_call" />

    <ImageButton
        android:id="@+id/btnHangout"
        android:background="@drawable/disconnect"
        android:contentDescription="@string/disconnect_call"
        android:layout_marginLeft="130dp"
        android:layout_width="48dp"
        android:layout_height="48dp"/>

    </LinearLayout>


</LinearLayout>